--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
+        "laravel/jetstream": "^5.1",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
